Расширила шапку и подвал на всю ширину

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         </div>
       </section>
     </main>
-    <footer class="decorated-zone">
+    <footer class="decorated-zone footer">
       <h2 class="header_heading">focus</h2>
     </footer>
   </body>
