--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main class="main">
       <div class="main-text">
         <h2 class="main_heading">Почему сосредоточиться так сложно</h2>
-        <section class="paragraph">
+        <section class="paragraph paragraph_margin-left">
           <h3 class="title-decor">Многозадачность</h3>
           <p class="paragraph_line-height">
             Особенно сложно сосредоточиться, когда задач много и все они —
@@ -79,7 +79,7 @@
             устаём.
           </p>
         </section>
-        <section class="paragraph">
+        <section class="paragraph paragraph_margin-left">
           <h3 class="title-decor">Дофамин</h3>
           <p class="paragraph_line-height">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -131,7 +131,7 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <section class="paragraph">
+        <section class="paragraph paragraph_margin-left">
           <h3 class="title-decor title-decor_margin-bottom">
             5 простых (на самом деле не очень) советов
           </h3>
@@ -147,7 +147,7 @@
             проблемах из будущего.
           </p>
         </section>
-        <section class="paragraph">
+        <section class="paragraph paragraph_margin-left">
           <h4 class="title-decor">Включите музыку</h4>
           <p class="paragraph_line-height">
             Но не любую, и не любимую. Любимая может быть связана с сильными
@@ -156,7 +156,7 @@
             попробовать включить плейлист c «белым шумом» или нейромузыкой.
           </p>
         </section>
-        <section class="paragraph">
+        <section class="paragraph paragraph_margin-left">
           <h4 class="title-decor">Прогуляйтесь</h4>
           <p class="paragraph_line-height">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -171,7 +171,7 @@
             простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </section>
-        <section class="paragraph">
+        <section class="paragraph paragraph_margin-left">
           <h4 class="title-decor">Хорошо ешьте</h4>
           <p class="paragraph_line-height">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
@@ -180,7 +180,7 @@
             фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
         </section>
-        <section class="paragraph">
+        <section class="paragraph paragraph_margin-left">
           <h4 class="title-decor">Читайте</h4>
           <p class="paragraph_line-height">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
@@ -190,9 +190,8 @@
           </p>
         </section>
       </div>
-      <section class="section_gallery">
-        <h3 class="title-decor">А можно в картинках?</h3>
-        <div class="gallery">
+      <section class="gallery">
+        <h3 class="title-decor gallery_title-decor">А можно в картинках?</h3>
           <div class="image">
             <img
               class="gallery_image"
@@ -223,7 +222,6 @@
               src="./images/street.png"
               alt="Улица в Японии">
           </div>
-        </div>
       </section>
     </main>
     <footer class="decorated-zone footer">
