Подправила критические примечания

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="color-scheme" content="light dark">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark" />
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/globals.css">
-    <link rel="stylesheet" href="./styles/variables.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/section.css">
-    <link rel="stylesheet" href="./styles/headings_and_decors.css">
-    <link rel="stylesheet" href="./styles/gallery.css">
-    <link rel="stylesheet" href="./styles/dark.css">
-    <link rel="stylesheet" href="./styles/light.css">
-    <link rel="stylesheet" href="./styles/diffrent-sizes/tablet.css">
-    <link rel="stylesheet" href="./styles/diffrent-sizes/latop.css">
-    <link rel="icon" href="./images/favicon.ico" sizes="any">
-    <link rel="icon" href="./images/favicon.svg" sizes="any">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/section.css" />
+    <link rel="stylesheet" href="./styles/headings_and_decors.css" />
+    <link rel="stylesheet" href="./styles/gallery.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/diffrent-sizes/tablet.css" />
+    <link rel="stylesheet" href="./styles/diffrent-sizes/latop.css" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" sizes="any" />
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
@@ -51,7 +51,7 @@
             </li>
           </ul>
         </nav>
-        <h1 class="header_heading">no focus</h1>
+        <h1 class="title-heading">no focus</h1>
         <p class="header_title title-decor">
           Что делать, когда не можешь делать ничего <br>Или почему нам так
           сложно сконцентрироваться, особенно когда очень надо
@@ -59,9 +59,9 @@
       </div>
     </header>
     <main class="main">
-      <div class="main-text">
-        <h2 class="main_heading">Почему сосредоточиться так сложно</h2>
-        <section class="paragraph paragraph_margin-left">
+      <section class="section">
+        <h2 class="section_heading">Почему сосредоточиться так сложно</h2>
+        <article class="card card-column">
           <h3 class="title-decor">Многозадачность</h3>
           <p class="paragraph_line-height">
             Особенно сложно сосредоточиться, когда задач много и все они —
@@ -78,8 +78,8 @@
             стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
             устаём.
           </p>
-        </section>
-        <section class="paragraph paragraph_margin-left">
+        </article>
+        <article class="card card-column">
           <h3 class="title-decor">Дофамин</h3>
           <p class="paragraph_line-height">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -91,9 +91,11 @@
             удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
             тем больше удовольствия получаешь.
           </p>
-        </section>
-        <h2 class="main_heading">Что снижает концентрацию внимания?</h2>
-        <section class="paragraph">
+        </article>
+      </section>
+      <section class="section">
+        <h2 class="section_heading">Что снижает концентрацию внимания?</h2>
+        <article class="card card-adataption">
           <h3 class="title-decor">Многозадачность</h3>
           <p class="paragraph_line-height">
             Как концентрация может снижаться из-за… концентрации? Любая
@@ -103,8 +105,8 @@
             — невозможно. Концентрация — мышца, и она может не выдержать, если
             не давать ей отдохнуть.
           </p>
-        </section>
-        <section class="paragraph">
+        </article>
+        <article class="card card-adataption">
           <h3 class="title-decor">Еда</h3>
           <p class="paragraph_line-height">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -114,8 +116,8 @@
             заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
             больше быстрых углеводов.
           </p>
-        </section>
-        <section class="paragraph">
+        </article>
+        <article class="card card-adataption">
           <h3 class="title-decor">Гаджеты</h3>
           <p class="paragraph_line-height">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -126,15 +128,18 @@
             что чем больше времени мы проводим в гаджетах, тем больше времени
             затем нужно, чтобы вернуться к работе.
           </p>
-        </section>
-        <h2 class="main_heading">
+        </article>
+      </section>
+      <section class="section">
+        <h2 class="section_heading">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <section class="paragraph paragraph_margin-left">
-          <h3 class="title-decor title-decor_margin-bottom">
-            5 простых (на самом деле не очень) советов
-          </h3>
+        <h3 class="title-decor title-decor_margin-bottom">
+          5 простых (на самом деле не очень) советов
+        </h3> 
+        <article class="card card-column">
+               
           <h4 class="title-decor">Представьте небо и облака</h4>
           <p class="paragraph_line-height">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
@@ -146,8 +151,8 @@
             вернуться в настоящий момент, а не волноваться о потенциальных
             проблемах из будущего.
           </p>
-        </section>
-        <section class="paragraph paragraph_margin-left">
+        </article>
+        <article class="card card-column">
           <h4 class="title-decor">Включите музыку</h4>
           <p class="paragraph_line-height">
             Но не любую, и не любимую. Любимая может быть связана с сильными
@@ -155,8 +160,8 @@
             Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
             попробовать включить плейлист c «белым шумом» или нейромузыкой.
           </p>
-        </section>
-        <section class="paragraph paragraph_margin-left">
+        </article>
+        <article class="card card-column">
           <h4 class="title-decor">Прогуляйтесь</h4>
           <p class="paragraph_line-height">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -170,8 +175,8 @@
             мозг поступит ещё больше кислорода и он будет лучше работать. Но и
             простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
-        </section>
-        <section class="paragraph paragraph_margin-left">
+        </article>
+        <article class="card card-column">
           <h4 class="title-decor">Хорошо ешьте</h4>
           <p class="paragraph_line-height">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
@@ -179,8 +184,8 @@
             высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
             фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
-        </section>
-        <section class="paragraph paragraph_margin-left">
+        </article>
+        <article class="card card-column">
           <h4 class="title-decor">Читайте</h4>
           <p class="paragraph_line-height">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
@@ -188,44 +193,39 @@
             секунд. А вот интересная книга способна затянуть и на несколько
             часов и круто тренирует направленное внимание.
           </p>
-        </section>
-      </div>
+        </article>
+      </section>
       <section class="gallery">
         <h3 class="title-decor gallery_title-decor">А можно в картинках?</h3>
-          <div class="image">
-            <img
-              class="gallery_image"
-              src="./images/sunset.png"
-              alt="Закат на море">
-          </div>
-          <div class="image">
-            <img
-              class="gallery_image"
-              src="./images/ice-cream.png"
-              alt="Глубокая тарелка мороженого с милыми лицами">
-          </div>
-          <div class="image">
-            <img
-              class="gallery_image"
-              src="./images/tape.png"
-              alt="Касета в окружении курсора, иконки песочных часов, иконки папки, ромашки, окнов с кнопкой 'OK' и прогрывателя музыки">
-          </div>
-          <div class="image">
-            <img
-              class="gallery_image"
-              src="./images/books.png"
-              alt="Стопка книг на светло-фиолетовом фоне со звёздами">
-          </div>
-          <div class="image">
-            <img
-              class="gallery_image"
-              src="./images/street.png"
-              alt="Улица в Японии">
-          </div>
+          <img
+            class="gallery_image"
+            src="./images/sunset.png"
+            alt="Закат на море"
+          />
+          <img
+            class="gallery_image"
+            src="./images/ice-cream.png"
+            alt="Глубокая тарелка мороженого с милыми лицами"
+          />
+          <img
+            class="gallery_image"
+            src="./images/tape.png"
+            alt="Касета в окружении курсора, иконки песочных часов, иконки папки, ромашки, окнов с кнопкой 'OK' и прогрывателя музыки"
+          />
+          <img
+            class="gallery_image"
+            src="./images/books.png"
+            alt="Стопка книг на светло-фиолетовом фоне со звёздами"
+          />
+          <img
+            class="gallery_image"
+            src="./images/street.png"
+            alt="Улица в Японии"
+          />
       </section>
     </main>
     <footer class="decorated-zone footer">
-      <h2 class="header_heading">focus</h2>
+      <h2 class="title-heading">focus</h2>
     </footer>
   </body>
 </html>
