--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="light dark" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light dark">
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/section.css" />
-    <link rel="stylesheet" href="./styles/headings_and_decors.css" />
-    <link rel="stylesheet" href="./styles/gallery.css" />
-    <link rel="stylesheet" href="./styles/dark.css" />
-    <link rel="stylesheet" href="./styles/light.css" />
-    <link rel="stylesheet" href="./styles/diffrent-sizes/tablet.css" />
-    <link rel="stylesheet" href="./styles/diffrent-sizes/latop.css" />
-    <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon.svg" sizes="any" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/section.css">
+    <link rel="stylesheet" href="./styles/headings_and_decors.css">
+    <link rel="stylesheet" href="./styles/gallery.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
+    <link rel="stylesheet" href="./styles/diffrent-sizes/tablet.css">
+    <link rel="stylesheet" href="./styles/diffrent-sizes/latop.css">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" sizes="image/svg+xml">
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="text-decor"></div>
+      <div class="text-decor" aria-hidden="true"></div>
       <div class="header-grid">
         <nav class="header__theme-menu">
           <ul class="header__theme-menu-list">
@@ -61,7 +61,7 @@
     <main class="main">
       <section class="section">
         <h2 class="section_heading">Почему сосредоточиться так сложно</h2>
-        <article class="card card-column">
+        <article class="card card_grid-column">
           <h3 class="title-decor">Многозадачность</h3>
           <p class="paragraph_line-height">
             Особенно сложно сосредоточиться, когда задач много и все они —
@@ -72,14 +72,15 @@
               target="_blank"
               href="https://dana.org/article/multicosts-of-multitasking/"
               >выяснили</a
-            >, что мозгу тяжело концентрироваться даже на двух делах
+            >
+            , что мозгу тяжело концентрироваться даже на двух делах
             одновременно. А когда в поле внимания попадает несколько важных
             задач, организм паникует и выделяет кортизол и адреналин — «гормоны
             стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
             устаём.
           </p>
         </article>
-        <article class="card card-column">
+        <article class="card card_grid-column">
           <h3 class="title-decor">Дофамин</h3>
           <p class="paragraph_line-height">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -95,7 +96,7 @@
       </section>
       <section class="section">
         <h2 class="section_heading">Что снижает концентрацию внимания?</h2>
-        <article class="card card-adataption">
+        <article class="card card_grid">
           <h3 class="title-decor">Многозадачность</h3>
           <p class="paragraph_line-height">
             Как концентрация может снижаться из-за… концентрации? Любая
@@ -106,7 +107,7 @@
             не давать ей отдохнуть.
           </p>
         </article>
-        <article class="card card-adataption">
+        <article class="card card_grid">
           <h3 class="title-decor">Еда</h3>
           <p class="paragraph_line-height">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -117,7 +118,7 @@
             больше быстрых углеводов.
           </p>
         </article>
-        <article class="card card-adataption">
+        <article class="card card_grid">
           <h3 class="title-decor">Гаджеты</h3>
           <p class="paragraph_line-height">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -130,16 +131,15 @@
           </p>
         </article>
       </section>
-      <section class="section">
+      <section class="section section_gap">
         <h2 class="section_heading">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <h3 class="title-decor title-decor_margin-bottom">
-          5 простых (на самом деле не очень) советов
-        </h3> 
-        <article class="card card-column">
-               
+        <article class="card card_grid-column">
+          <h3 class="title-decor title-decor_margin-bottom">
+            5 простых (на самом деле не очень) советов
+          </h3>
           <h4 class="title-decor">Представьте небо и облака</h4>
           <p class="paragraph_line-height">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
@@ -152,7 +152,7 @@
             проблемах из будущего.
           </p>
         </article>
-        <article class="card card-column">
+        <article class="card card_grid-column">
           <h4 class="title-decor">Включите музыку</h4>
           <p class="paragraph_line-height">
             Но не любую, и не любимую. Любимая может быть связана с сильными
@@ -161,7 +161,7 @@
             попробовать включить плейлист c «белым шумом» или нейромузыкой.
           </p>
         </article>
-        <article class="card card-column">
+        <article class="card card_grid-column">
           <h4 class="title-decor">Прогуляйтесь</h4>
           <p class="paragraph_line-height">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -176,7 +176,7 @@
             простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
-        <article class="card card-column">
+        <article class="card card_grid-column">
           <h4 class="title-decor">Хорошо ешьте</h4>
           <p class="paragraph_line-height">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
@@ -185,7 +185,7 @@
             фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
         </article>
-        <article class="card card-column">
+        <article class="card card_grid-column">
           <h4 class="title-decor">Читайте</h4>
           <p class="paragraph_line-height">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
@@ -197,31 +197,36 @@
       </section>
       <section class="gallery">
         <h3 class="title-decor gallery_title-decor">А можно в картинках?</h3>
-          <img
-            class="gallery_image"
-            src="./images/sunset.png"
-            alt="Закат на море"
-          />
-          <img
-            class="gallery_image"
-            src="./images/ice-cream.png"
-            alt="Глубокая тарелка мороженого с милыми лицами"
-          />
-          <img
-            class="gallery_image"
-            src="./images/tape.png"
-            alt="Касета в окружении курсора, иконки песочных часов, иконки папки, ромашки, окнов с кнопкой 'OK' и прогрывателя музыки"
-          />
-          <img
-            class="gallery_image"
-            src="./images/books.png"
-            alt="Стопка книг на светло-фиолетовом фоне со звёздами"
-          />
-          <img
-            class="gallery_image"
-            src="./images/street.png"
-            alt="Улица в Японии"
-          />
+        <img
+          class="gallery_image"
+          src="./images/sunset.png"
+          alt="Закат на море"
+          loading="lazy"
+        >
+        <img
+          class="gallery_image"
+          src="./images/ice-cream.png"
+          alt="Глубокая тарелка мороженого с милыми лицами"
+          loading="lazy"
+        >
+        <img
+          class="gallery_image"
+          src="./images/tape.png"
+          alt="Касета в окружении курсора, иконки песочных часов, иконки папки, ромашки, окнов с кнопкой 'OK' и прогрывателя музыки"
+          loading="lazy"
+        >
+        <img
+          class="gallery_image"
+          src="./images/books.png"
+          alt="Стопка книг на светло-фиолетовом фоне со звёздами"
+          loading="lazy"
+        >
+        <img
+          class="gallery_image"
+          src="./images/street.png"
+          alt="Улица в Японии"
+          loading="lazy"
+        >
       </section>
     </main>
     <footer class="decorated-zone footer">
