Подправила критические комментари

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </article>
       </section>
       <section>
-        <h2 class="section_heading section_heading-margin-block">Что снижает концентрацию внимания?</h2>
+        <h2 class="section section_heading section_heading-margin-bottom">Что снижает концентрацию внимания?</h2>
         <div class="cards_row-grid">
           <article>
             <h3 class="title-decor">Многозадачность</h3>
@@ -141,7 +141,7 @@
             5 простых (на самом деле не очень) советов
           </h3>
           <article class="card">
-            <h4 class="title-decor">Представьте небо и облака</h4>
+            <h4 class="title-decor title-decor_unbolding">Представьте небо и облака</h4>
             <p class="paragraph_line-height">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -154,7 +154,7 @@
             </p>
           </article>
           <article class="card">
-            <h4 class="title-decor">Включите музыку</h4>
+            <h4 class="title-decor title-decor_unbolding">Включите музыку</h4>
             <p class="paragraph_line-height">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -163,7 +163,7 @@
             </p>
           </article>
           <article class="card">
-            <h4 class="title-decor">Прогуляйтесь</h4>
+            <h4 class="title-decor title-decor_unbolding">Прогуляйтесь</h4>
             <p class="paragraph_line-height">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
@@ -178,7 +178,7 @@
             </p>
           </article>
           <article class="card">
-            <h4 class="title-decor">Хорошо ешьте</h4>
+            <h4 class="title-decor title-decor_unbolding">Хорошо ешьте</h4>
             <p class="paragraph_line-height">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -187,7 +187,7 @@
             </p>
           </article>
           <article class="card">
-            <h4 class="title-decor">Читайте</h4>
+            <h4 class="title-decor title-decor_unbolding">Читайте</h4>
             <p class="paragraph_line-height">
               Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
               прочитать пост в соцсети, достаточно нескольких минут или даже
@@ -231,8 +231,9 @@
         >
       </section>
     </main>
-    <footer class="decorated-zone footer">
-      <h2 class="title-heading">focus</h2>
+    <footer class="footer decorated-zone">
+        <h2 class="title-heading title-heading_justify-center">focus</h2>
+      </div>
     </footer>
   </body>
 </html>
