Подправила все критические замечания

--- a/index.html
+++ b/index.html
@@ -24,39 +24,37 @@
   <body class="page">
     <header class="header decorated-zone">
       <div class="text-decor" aria-hidden="true"></div>
-      <div class="header-grid">
-        <nav class="header__theme-menu">
-          <ul class="header__theme-menu-list">
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_light"
-              >
-                День
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-                disabled
-              >
-                Авто
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_dark"
-              >
-                Неон
-              </button>
-            </li>
-          </ul>
-        </nav>
-        <h1 class="title-heading">no focus</h1>
-        <p class="header_title title-decor">
-          Что делать, когда не можешь делать ничего <br>Или почему нам так
-          сложно сконцентрироваться, особенно когда очень надо
-        </p>
-      </div>
+      <nav class="header__theme-menu">
+        <ul class="header__theme-menu-list">
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_light"
+            >
+              День
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+              disabled
+            >
+              Авто
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_dark"
+            >
+              Неон
+            </button>
+          </li>
+        </ul>
+      </nav>
+      <h1 class="title-heading header_title-heading">no focus</h1>
+      <p class="header_title title-decor">
+        Что делать, когда не можешь делать ничего <br>Или почему нам так
+        сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
     <main class="main">
       <section class="section">
@@ -71,7 +69,8 @@
             <a
               target="_blank"
               href="https://dana.org/article/multicosts-of-multitasking/"
-              >выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах
+              >выяснили</a
+            >, что мозгу тяжело концентрироваться даже на двух делах
             одновременно. А когда в поле внимания попадает несколько важных
             задач, организм паникует и выделяет кортизол и адреналин — «гормоны
             стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
@@ -93,17 +92,19 @@
         </article>
       </section>
       <section>
-        <h2 class="section section_heading section_heading-margin-bottom">Что снижает концентрацию внимания?</h2>
+        <h2 class="section section_heading section_heading-margin-bottom">
+          Что снижает концентрацию внимания?
+        </h2>
         <div class="cards_row-grid">
           <article>
             <h3 class="title-decor">Многозадачность</h3>
             <p class="paragraph_line-height">
               Как концентрация может снижаться из-за… концентрации? Любая
-              стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
-              мозг постоянно «сканировать» окружающую среду на предмет опасности.
-              Например, читать новости вместо работы. Но быть собранными всё время
-              — невозможно. Концентрация — мышца, и она может не выдержать, если
-              не давать ей отдохнуть.
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
             </p>
           </article>
           <article>
@@ -111,22 +112,22 @@
             <p class="paragraph_line-height">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
-              эта энергия также быстро, как и приходит. А мы в результате попадаем
-              на «углеводные качели»: как только действие «быстрых углеводов»
-              заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
-              больше быстрых углеводов.
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
             </p>
           </article>
           <article>
             <h3 class="title-decor">Гаджеты</h3>
             <p class="paragraph_line-height">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-              наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
-              утятами. В результате мозг пытается переключиться с одной задачи на
-              другую — и просто не может. А чтобы вернуться к состоянию полной
-              концентрации, человеку в среднем нужно 20 минут. Вот и получается,
-              что чем больше времени мы проводим в гаджетах, тем больше времени
-              затем нужно, чтобы вернуться к работе.
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
           </article>
         </div>
@@ -141,11 +142,13 @@
             5 простых (на самом деле не очень) советов
           </h3>
           <article class="card">
-            <h4 class="title-decor title-decor_unbolding">Представьте небо и облака</h4>
+            <h4 class="title-decor title-decor_unbolding">
+              Представьте небо и облака
+            </h4>
             <p class="paragraph_line-height">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-              успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-              раз и мешают эти сложные задачи делать. В такие моменты можно
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
               закрыть глаза и представить, что чистое небо — это вы, а облака —
               тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
               где-то там, за тучами, и никуда не денется. Это упражнение поможет
@@ -182,17 +185,17 @@
             <p class="paragraph_line-height">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
-              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
-              фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </article>
           <article class="card">
             <h4 class="title-decor title-decor_unbolding">Читайте</h4>
             <p class="paragraph_line-height">
-              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
-              прочитать пост в соцсети, достаточно нескольких минут или даже
-              секунд. А вот интересная книга способна затянуть и на несколько
-              часов и круто тренирует направленное внимание.
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
             </p>
           </article>
         </div>
@@ -232,8 +235,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-        <h2 class="title-heading title-heading_justify-center">focus</h2>
-      </div>
+      <h2 class="title-heading footer_title-heading">focus</h2>
     </footer>
   </body>
 </html>
