Удалила дублирующее свойство у кнопки меню

--- a/index.html
+++ b/index.html
@@ -206,32 +206,27 @@
           class="gallery_image"
           src="./images/sunset.png"
           alt="Закат на море"
-          loading="lazy"
-        >
+          loading="lazy">
         <img
           class="gallery_image"
           src="./images/ice-cream.png"
           alt="Глубокая тарелка мороженого с милыми лицами"
-          loading="lazy"
-        >
+          loading="lazy">
         <img
           class="gallery_image"
           src="./images/tape.png"
           alt="Касета в окружении курсора, иконки песочных часов, иконки папки, ромашки, окнов с кнопкой 'OK' и прогрывателя музыки"
-          loading="lazy"
-        >
+          loading="lazy">
         <img
           class="gallery_image"
           src="./images/books.png"
           alt="Стопка книг на светло-фиолетовом фоне со звёздами"
-          loading="lazy"
-        >
+          loading="lazy">
         <img
           class="gallery_image"
           src="./images/street.png"
           alt="Улица в Японии"
-          loading="lazy"
-        >
+          loading="lazy">
       </section>
     </main>
     <footer class="footer decorated-zone">
